--- a/src/index.css
+++ b/src/index.css
@@ -293,7 +293,8 @@ body {
   color: #767676;
 }
 .page-wrap {
-  padding-top: 80px;
+  /* padding-top: 80px; */
+  padding-top: 50px;
 }
 .page-wrap {
   padding-bottom: 100px;
