agrego estilos de hover a las cards de proyectos

--- a/public/css/post-6.css
+++ b/public/css/post-6.css
@@ -610,6 +610,7 @@
   font-weight: normal;
   line-height: 30px;
   margin-bottom: 10px;
+  padding-bottom: 5px;
 }
 .elementor-6
   .elementor-element.elementor-element-f76fcf5
