agrego iconos de redes, imagen de proyecto y descripcion

--- a/public/css/post-6.css
+++ b/public/css/post-6.css
@@ -53,7 +53,7 @@
 .elementor-6
   .elementor-element.elementor-element-93f7ea4
   .elementor-heading-title {
-  color: #232227;
+  color: #545cf5;
   line-height: 48px;
 }
 .elementor-6
@@ -154,7 +154,8 @@
   .elementor-heading-title {
   color: #232227;
   font-weight: bold;
-  line-height: 40px;
+  line-height: 35px;
+  font-size: 25px;
 }
 .elementor-6
   .elementor-element.elementor-element-2432e9f
