--- a/src/index.css
+++ b/src/index.css
@@ -1152,7 +1152,7 @@ input::placeholder {
 }
 
 #sidebar-footer {
-  padding: 80px 0 0;
+  /* padding: 80px 0 0; */
   background-color: #111334;
   text-align: center;
   font-size: 20px;
