--- a/src/index.css
+++ b/src/index.css
@@ -1096,6 +1096,27 @@ input::placeholder {
   right: 0;
 }
 
+.button-link-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.repository-link {
+  display: flex;
+  align-items: flex-end;
+  margin-right: 15px;
+  color: #545cf591;
+  text-decoration: underline !important;
+}
+
+.repository-link:visited {
+  color: #747e8c;
+}
+
+.repository-link:hover {
+  color: #545cf5;
+}
+
 #home-portfolio .portfolio-section.style2 .project-filter {
   display: none;
 }
